# aretomo-tilt-series-qc

./: .gitignore  LICENSE  README.md  aretomo3-editor  aretomo3-preprocess  environment.yml  parse_aln.py  pyproject.toml  relion5_particles_to_mod.py  star2mod.py  trim_imod_files.py
aretomo3_editor/: __main__.py  cli.py
aretomo3_editor/commands/: analyse.py  check_gain_transform.py  trim_ts.py  validate_mdoc.py
aretomo3_editor/shared/: colours.py  parsers.py  project_json.py
aretomo3_preprocess/: __main__.py  cli.py
aretomo3_preprocess/commands/: aln_edit.py  analyse.py  check_gain_transform.py  cryocare.py  deep_dewedge.py  deep_dewedge_mw.py  enrich.py  gapstop_match.py  imod_mtffilter.py  membrain_seg.py  pytom_extract.py  pytom_match.py  relion5_convert.py  rename_ts.py  run_aretomo3.py  run_aretomo3_per_ts.py  select_ts.py  simple_box_mask.py  slabify.py  topaz_denoise3d.py  topaz_train.py  trim_ts.py  validate_mdoc.py
aretomo3_preprocess/shared/: geometry.py  output_guard.py  parsers.py  project_json.py  project_state.py  volume_qc.py
docs/: check-gain-transform.md  install-gapstop.md  version2_ideas.md
notebooks/: gain_comparison.ipynb
tests/: generate_test_ts.py  test_parsing.py
