[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "aretomo3-editor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "mrcfile",
    "tifffile",
    "scikit-image",
]

[project.scripts]
aretomo3-editor = "aretomo3_editor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aretomo3_editor*"]
